--- a/public/Html/community.html
+++ b/public/Html/community.html
@@ -27,7 +27,7 @@
         </ul>
     </nav>
     <main>
-        <h1>Achievements</h1>
+        <h1>Community</h1>
         <section class="filtering">
             <div class="searchbar">
                 <span class="material-symbols-outlined search-icon">
