--- a/public/Html/dashboard.html
+++ b/public/Html/dashboard.html
@@ -47,7 +47,7 @@
                 </a>
             </li>
             <li class="navbar-list-item">
-                <a href="profile.html" class="navbar-link unselectable">
+                <a href="profileV2.html" class="navbar-link unselectable">
                     <span class="material-symbols-outlined">
                         person
                     </span>
@@ -80,7 +80,7 @@
                 </a>
             </div>
             <div class="dashboardCard">
-                <a href="profile.html" class="dashboardCardLink">
+                <a href="profileV2.html" class="dashboardCardLink">
                     <span class="dashboardCardInfo">
                         <h2>Cards Studied</h2>
                         <span class="material-symbols-outlined">
